fix: Fixed font color for education pages in dark mode (#943)

--- a/assets/styles/sections/education.scss
+++ b/assets/styles/sections/education.scss
@@ -229,6 +229,11 @@ html[data-theme='dark'] {
               border-left: 2px solid get-dark-color('accent-color');
             }
           }
+          .custom-section {
+            .custom-content {
+              color: get-dark-color('text-color');
+            }
+          }
         }
       }
     }
